tests/ui/g-loop-label-mismatch.stderr
error[E0107]: type alias takes at most 3 generic arguments but 4 generic arguments were supplied
  --> tests/ui/g-loop-label-mismatch.rs:52:9
   |
52 |           LoopBreakSteps<
   |           ^^^^^^^^^^^^^^ expected at most 3 generic arguments
...
59 |               >,
   |  ______________-
60 | |             StepNil,
   | |___________________- help: remove the unnecessary generic argument
   |
note: type alias defined here, with at most 3 generic parameters: `Controller`, `BreakMsg`, `Tail`
  --> src/global/program.rs
   |
   | pub type LoopBreakSteps<Controller, BreakMsg, Tail = StepNil> =
   |          ^^^^^^^^^^^^^^ ----------  --------  --------------

error[E0277]: the trait bound `Message<LabelMarker<7>, ()>: StepConcat<StepNil>` is not satisfied
   --> tests/ui/g-loop-label-mismatch.rs:102:9
    |
102 | /         LoopSteps<
103 | |             BodySteps,
104 | |             Controller,
105 | |             Target,
...   |
116 | |             StepNil,
117 | |         >,
    | |_________^ the trait `StepConcat<StepNil>` is not implemented for `Message<LabelMarker<7>, ()>`
    |
    = help: the following other types implement trait `StepConcat<Other>`:
              StepCons<Head, Tail>
              StepNil
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<7>, ()>>` to implement `StepConcat<StepNil>`

error[E0277]: the trait bound `Role<1>: LoopContinueMessage` is not satisfied
   --> tests/ui/g-loop-label-mismatch.rs:102:9
    |
102 | /         LoopSteps<
103 | |             BodySteps,
104 | |             Controller,
105 | |             Target,
...   |
116 | |             StepNil,
117 | |         >,
    | |_________^ the trait `LoopContinueMessage` is not implemented for `Role<1>`
    |
    = help: the trait `LoopContinueMessage` is implemented for `Message<LabelMarker<hibana::::global::program::{impl#7}::{constant#0}>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>`
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>` to implement `LoopStepsAssert<Role<1>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>`

error[E0277]: the trait bound `Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>: LoopBreakMessage` is not satisfied
   --> tests/ui/g-loop-label-mismatch.rs:102:9
    |
102 | /         LoopSteps<
103 | |             BodySteps,
104 | |             Controller,
105 | |             Target,
...   |
116 | |             StepNil,
117 | |         >,
    | |_________^ unsatisfied trait bound
    |
    = help: the trait `LoopBreakMessage` is not implemented for `Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>`
    = help: the trait `LoopBreakMessage` is implemented for `Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>`
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>` to implement `LoopStepsAssert<Role<1>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>`

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-loop-label-mismatch.rs:16:44
   |
16 |     const BODY: g::Program<BodySteps> = g::send::<Controller, Target, g::Msg<7, ()>>();
   |                                            ^^^^   ----------  ------  ------------- supplied 3 generic arguments
   |                                            |
   |                                            expected 4 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
16 |     const BODY: g::Program<BodySteps> = g::send::<Controller, Target, g::Msg<7, ()>, LANE>();
   |                                                                                    ++++++

error[E0308]: mismatched types
  --> tests/ui/g-loop-label-mismatch.rs:16:41
   |
16 |     const BODY: g::Program<BodySteps> = g::send::<Controller, Target, g::Msg<7, ()>>();
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Message<LabelMarker<7>, ()>`, found `StepNil`
   |
   = note: expected struct `Program<StepCons<SendStep<Role<0>, Role<0>, Role<1>, 0>, Message<LabelMarker<7>, ()>>>`
              found struct `Program<StepCons<SendStep<_, _, _, _>, StepNil>>`

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-loop-label-mismatch.rs:28:12
   |
28 |       > = g::send::<Controller, Target, g::Msg<
   |  ____________^^^^___----------__------__-
   | |            |
   | |            expected 4 generic arguments
29 | |         99,
30 | |         GenericCapToken<LoopContinueKind>,
31 | |         CanonicalControl<LoopContinueKind>,
32 | |     >>();
   | |_____- supplied 3 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
32 |     >, LANE>();
   |      ++++++

error[E0308]: mismatched types
  --> tests/ui/g-loop-label-mismatch.rs:28:9
   |
28 |       > = g::send::<Controller, Target, g::Msg<
   |  _________^
29 | |         99,
30 | |         GenericCapToken<LoopContinueKind>,
31 | |         CanonicalControl<LoopContinueKind>,
32 | |     >>();
   | |________^ expected `Message<LabelMarker<99>, ..., ...>`, found `StepNil`
   |
   = note: expected struct `Program<StepCons<SendStep<Role<0>, Role<0>, Role<1>, 0>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>>`
              found struct `Program<StepCons<SendStep<_, _, _, _>, StepNil>>`

error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-loop-label-mismatch.rs:46:12
   |
46 |       > = g::send::<Controller, Target, g::Msg<
   |  ____________^^^^___----------__------__-
   | |            |
   | |            expected 4 generic arguments
47 | |         LABEL_LOOP_BREAK,
48 | |         GenericCapToken<LoopBreakKind>,
49 | |         CanonicalControl<LoopBreakKind>,
50 | |     >>();
   | |_____- supplied 3 generic arguments
   |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ^^^^ ----  --  -  --------------
help: add missing generic argument
   |
50 |     >, LANE>();
   |      ++++++

error[E0277]: the trait bound `CanonicalControl<LoopBreakKind>: RequireSelfSendForCanonical<False>` is not satisfied
  --> tests/ui/g-loop-label-mismatch.rs:46:39
   |
46 |       > = g::send::<Controller, Target, g::Msg<
   |  _______________________________________^
47 | |         LABEL_LOOP_BREAK,
48 | |         GenericCapToken<LoopBreakKind>,
49 | |         CanonicalControl<LoopBreakKind>,
50 | |     >>();
   | |_____^ the trait `RequireSelfSendForCanonical<False>` is not implemented for `CanonicalControl<LoopBreakKind>`
   |
   = help: the trait `RequireSelfSendForCanonical<False>` is not implemented for `CanonicalControl<LoopBreakKind>`
           but trait `RequireSelfSendForCanonical<True>` is implemented for it
   = help: for that trait implementation, expected `True`, found `False`
note: required by a bound in `hibana::send`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
   |              ---- required by a bound in this function
...
   |         RequireSelfSendForCanonical<<From as steps::RoleEq<To>>::Output>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `send`

error[E0107]: function takes 2 generic arguments but 3 generic arguments were supplied
  --> tests/ui/g-loop-label-mismatch.rs:79:12
   |
79 |     > = g::route::<0, 1, _>(
   |            ^^^^^       --- help: remove the unnecessary generic argument
   |            |
   |            expected 2 generic arguments
   |
note: function defined here, with 2 generic parameters: `CONTROLLER`, `Steps`
  --> src/global.rs
   |
   | pub const fn route<const CONTROLLER: u8, Steps>(
   |              ^^^^^ --------------------  -----

error[E0277]: the trait bound `Role<1>: MessageSpec` is not satisfied
  --> tests/ui/g-loop-label-mismatch.rs:80:29
   |
80 |           g::route_chain::<0, LoopContinueSteps<
   |  _____________________________^
81 | |             Controller,
82 | |             Target,
83 | |             g::Msg<
...  |
87 | |             >,
88 | |         >>(CONTINUE_ARM)
   | |_________^ the trait `MessageSpec` is not implemented for `Role<1>`
   |
   = help: the trait `MessageSpec` is implemented for `Message<L, P, C>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>` to implement `hibana::global::steps::RouteArm<0>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`

error[E0277]: the trait bound `Role<1>: SendableLabel` is not satisfied
  --> tests/ui/g-loop-label-mismatch.rs:80:29
   |
80 |           g::route_chain::<0, LoopContinueSteps<
   |  _____________________________^
81 | |             Controller,
82 | |             Target,
83 | |             g::Msg<
...  |
87 | |             >,
88 | |         >>(CONTINUE_ARM)
   | |_________^ the trait `SendableLabel` is not implemented for `Role<1>`
   |
   = help: the trait `SendableLabel` is implemented for `Message<LabelMarker<LABEL>, Payload, Control>`
   = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>` to implement `hibana::global::steps::RouteArm<0>`
note: required by a bound in `hibana::route_chain`
  --> src/global.rs
   |
   | pub const fn route_chain<const CONTROLLER: u8, Steps>(
   |              ----------- required by a bound in this function
...
   |     Steps: steps::RouteArm<CONTROLLER>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `route_chain`

error[E0599]: the method `and` exists for struct `RouteChainBuilder<0, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>>`, but its trait bounds were not satisfied
  --> tests/ui/g-loop-label-mismatch.rs:89:14
   |
80 | /         g::route_chain::<0, LoopContinueSteps<
81 | |             Controller,
82 | |             Target,
83 | |             g::Msg<
...  |
88 | |         >>(CONTINUE_ARM)
89 | |             .and::<LoopBreakSteps<
   | |             -^^^ method cannot be called due to unsatisfied trait bounds
   | |_____________|
   |
   |
  ::: src/global.rs
   |
   |   pub struct Message<Label, Payload, Control = NoControl>(PhantomData<(Label, Payload, Control)>);
   |   ------------------------------------------------------- doesn't satisfy `_: StepConcat<_>`
   |
   = note: the following trait bounds were not satisfied:
           `Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>: StepConcat<_>`

error[E0277]: the trait bound `Message<LabelMarker<7>, ()>: StepConcat<StepNil>` is not satisfied
   --> tests/ui/g-loop-label-mismatch.rs:118:9
    |
118 |     > = g::seq(DECISION, BODY);
    |         ^^^^^^^^^^^^^^^^^^^^^^ the trait `StepConcat<StepNil>` is not implemented for `Message<LabelMarker<7>, ()>`
    |
    = help: the following other types implement trait `StepConcat<Other>`:
              StepCons<Head, Tail>
              StepNil
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, Message<LabelMarker<7>, ()>>` to implement `StepConcat<StepNil>`

error[E0277]: the trait bound `Role<1>: LoopContinueMessage` is not satisfied
   --> tests/ui/g-loop-label-mismatch.rs:118:9
    |
118 |     > = g::seq(DECISION, BODY);
    |         ^^^^^^^^^^^^^^^^^^^^^^ the trait `LoopContinueMessage` is not implemented for `Role<1>`
    |
    = help: the trait `LoopContinueMessage` is implemented for `Message<LabelMarker<hibana::::global::program::{impl#7}::{constant#0}>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>`
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>` to implement `LoopStepsAssert<Role<1>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>`

error[E0277]: the trait bound `Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>: LoopBreakMessage` is not satisfied
   --> tests/ui/g-loop-label-mismatch.rs:118:9
    |
118 |     > = g::seq(DECISION, BODY);
    |         ^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
    = help: the trait `LoopBreakMessage` is not implemented for `Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>`
    = help: the trait `LoopBreakMessage` is implemented for `Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>`
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>` to implement `LoopStepsAssert<Role<1>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>`

error[E0277]: the trait bound `Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>: StepConcat<_>` is not satisfied
   --> tests/ui/g-loop-label-mismatch.rs:118:9
    |
118 |     > = g::seq(DECISION, BODY);
    |         ^^^^^^^^^^^^^^^^^^^^^^ the trait `StepConcat<_>` is not implemented for `Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>`
    |
    = help: the following other types implement trait `StepConcat<Other>`:
              StepCons<Head, Tail>
              StepNil
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>, Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>>` to implement `StepConcat<_>`

error[E0277]: the trait bound `Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>: StepConcat<_>` is not satisfied
   --> tests/ui/g-loop-label-mismatch.rs:118:16
    |
118 |     > = g::seq(DECISION, BODY);
    |         ------ ^^^^^^^^ the trait `StepConcat<_>` is not implemented for `Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>`
    |         |
    |         required by a bound introduced by this call
    |
    = help: the following other types implement trait `StepConcat<Other>`:
              StepCons<Head, Tail>
              StepNil
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>, Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>>` to implement `StepConcat<_>`
    = note: 1 redundant requirement hidden
    = note: required for `StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>, Message<LabelMarker<49>, GenericCapToken<LoopBreakKind>, CanonicalControl<LoopBreakKind>>>>` to implement `StepConcat<_>`
note: required by a bound in `seq`
   --> src/global.rs
    |
    | pub const fn seq<LeftSteps, RightSteps>(
    |              --- required by a bound in this function
...
    |     LeftSteps: StepConcat<RightSteps>,
    |                ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `seq`

error[E0308]: mismatched types
   --> tests/ui/g-loop-label-mismatch.rs:118:9
    |
118 |     > = g::seq(DECISION, BODY);
    |         ^^^^^^^^^^^^^^^^^^^^^^ expected `Role<1>`, found `Message<LabelMarker<99>, ..., ...>`
    |
    = note: expected struct `Program<StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Role<1>>, _>>>`
               found struct `Program<StepCons<SendStep<Role<0>, Role<0>, Role<1>>, StepCons<SendStep<Role<0>, Role<0>, Message<LabelMarker<99>, GenericCapToken<LoopContinueKind>, CanonicalControl<LoopContinueKind>>>, _>>>`
